Fixing safari scrollbar bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,11 +109,15 @@
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
-  background-color: transparent !important;
 }
 
 ::-webkit-scrollbar-track {
   background-color: transparent !important;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2) !important;
+  border-radius: 4px;
 }
 
 * {
